--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3775251700711746"
+     crossorigin="anonymous"></script>
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
