--- a/index.html
+++ b/index.html
@@ -796,5 +796,17 @@
 
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3775251700711746"
+     crossorigin="anonymous"></script>
+<!-- First ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3775251700711746"
+     data-ad-slot="2831341845"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </body>
 </html>
