--- a/index.html
+++ b/index.html
@@ -808,5 +808,16 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3775251700711746"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="+4g+q6+5f-hd+6a"
+     data-ad-client="ca-pub-3775251700711746"
+     data-ad-slot="1363181659"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </body>
 </html>
